Fixed padding on mobile and updated resume

--- a/src/components/education/education.scss
+++ b/src/components/education/education.scss
@@ -47,6 +47,7 @@
                   width: 90%;
                   height: 75%;
                   margin-top: 50px;
+                  padding: 30px 10px;
                 }
 
                 @include ipad {
